# wardline

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  main.py  pyproject.toml  wardline.conformance.json  wardline.exceptions.json  wardline.manifest.baseline.json  wardline.perimeter.baseline.json  wardline.sarif.baseline.json  wardline.toml  wardline.yaml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
.hypothesis/constants/: 031fe350771aff11  038de9a155dd51e2  1503790e1c4bf0ab  1d5b42e9e920118c  20f5a800fc4c9f4f  222effe406005b1e  23b55ee42ed2db3f  243b5ecb3c78ae1c  2616b89b041fb9e9  2bc896e8f0afe46c  2c2b96c222cb86ba  33ff86b1b092f09b  34be754276f60388  34db14851344a1ee  3f12cbf5037a54cc  408415f674c8da36  40dfef2aa5219d10  47d49c18d8ffc6ba  4b1c0ddf25a0725c  50158f52c6fc2aa3  501cba7de9d26187  5193aa8be1604c66  54304873efbb6200  5618ef9058f7e9e7  57e5d9cdcefeda53  5894334e5d7e9b22  5c81d11b2861a496  5cc2d4da6871679d  5d7f6037d57c9e26  5f45aa7ba06fbf97  5f7e15fdb5d18bf1  5fd6bf22bd3ea6f8  61ef96e44f316479  6350a26eefa91993  63d6dcc520d59750  65785d93d85943a0  67e0915b12c0d656  699441793abb05f4  6bacb2d9730df020  6bef3bc682aac194  (+43 more)
corpus/: corpus_manifest.json  corpus_manifest.yaml
docs/: 2026-03-21-wardline-python-design.md  2026-03-22-execution-sequence.md  2026-03-22-filigree-filing-system.md  2026-03-22-filigree-population-plan.md  2026-03-24-rust-migration-feasibility.md  README.md  session-log-2026-03-28.md
docs/adr/: ADR-001-rename-taint-states-to-posture-vocabulary.md  ADR-002-rename-tier-source-decorators.md  README.md
docs/archive/: README.md
docs/audits/: README.md  rule-conformance-audit-2026-03-25.md
docs/design/: 2026-03-21-wardline-python-design.md  2026-03-24-flake8-plugin-design.md  2026-03-24-governance-cli-design.md  2026-03-24-l3-callgraph-taint-design.md  2026-03-24-runtime-enforcement-design.md  2026-03-25-audit-remediation-phase1-design.md  2026-03-25-two-hop-rejection-path-design.md  README.md
docs/plans/: 2026-03-23-post-mvp-roadmap.md  2026-03-24-v030-implementation-plan.md  2026-03-24-wp-2.1-l3-callgraph-taint.md  2026-03-24-wp-2.3a-governance-cli.md  2026-03-24-wp-3.2-runtime-enforcement.md  2026-03-25-audit-remediation-phase1.md  2026-03-25-authoritative-groups-7-15-reconciliation.md  2026-03-25-py-wl-006-audit-path-dominance.md  README.md
docs/reviews/: 2026-03-22-plan-review-synthesis.md  2026-03-22-population-plan-synthesis.md
docs/spec/: README.md  wardline-01-00-front-matter.md  wardline-01-01-what-a-wardline-is.md  wardline-01-02-the-problem-a-wardline-solves.md  wardline-01-03-non-goals.md  wardline-01-04-authority-tier-model.md  wardline-01-05-authority-tier-enforcement-spec.md  wardline-01-06-annotation-vocabulary.md  wardline-01-07-pattern-rules.md  wardline-01-08-enforcement-layers.md  wardline-01-09-governance-model.md  wardline-01-10-verification-properties.md  wardline-01-11-language-evaluation-criteria.md  wardline-01-12-residual-risks.md  wardline-01-13-portability-and-manifest-format.md  wardline-01-14-conformance.md  wardline-02-00-front-matter.md  wardline-02-A-python-binding.md  wardline-02-B-java-binding.md  wardline-complete.md  wardline-lite.md
docs/superpowers/: 05-quality-assessment.md
docs/verification/: MINISPEC-PROMPT.md  README.md  RENAME-EXECUTE-PROMPT.md  RENAME-IMPACT-PROMPT.md  SESSION-PICKUP-2026-03-29.md  SPEC-PART1-RENAME-PROMPT.md  VERIFY-SUBSYSTEM-PROMPT.md  VERIFY-SYNTHESIS-PROMPT.md  rename-migration-manifest.md
docs/wardline/: wardline-01-00-front-matter.md  wardline-01-01-what-a-wardline-is.md  wardline-01-02-the-problem-a-wardline-solves.md  wardline-01-03-non-goals.md  wardline-01-04-authority-tier-model.md  (+15 more)
scripts/: check_yaml_safety.sh  coverage_check.py  generate_corpus.py
spike/: fixture_broad_except.py  registry_validation.py  rule_base.py  rule_py_wl_004.py  run_tracer.py  sarif_emitter.py
tests/: conftest.py
wardline-flake8/: README.md  pyproject.toml
wardline-flake8/src/wardline_flake8/: __init__.py  checker.py  wl001.py  wl002.py  wl003.py  wl004.py  wl005.py
wardline-flake8/tests/: conftest.py  test_integration.py  test_wl001.py  test_wl002.py  test_wl003.py  test_wl004.py  test_wl005.py
(+799 files in other folders)
