[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wardline"
version = "0.1.0"
description = "Semantic boundary enforcement framework for Python"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
dependencies = []
keywords = [
    "security",
    "static-analysis",
    "trust-boundaries",
    "taint-analysis",
    "sarif",
    "boundary-enforcement",
]
authors = [
    { name = "John M" },
]

[project.optional-dependencies]
scanner = [
    "pyyaml>=6.0",
    "jsonschema>=4.0",
    "click>=8.0",
]
dev = [
    "wardline[scanner]",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-randomly",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[project.scripts]
wardline = "wardline.cli.main:cli"

[project.urls]
Homepage = "https://wardline.dev"
Repository = "https://github.com/johnm-dta/wardline"
Documentation = "https://wardline.dev"
Changelog = "https://github.com/johnm-dta/wardline/blob/main/CHANGELOG.md"
Issues = "https://github.com/johnm-dta/wardline/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/wardline"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not integration and not network'"
markers = [
    "integration: marks tests as integration tests (deselected by default)",
    "network: marks tests requiring network access (deselected by default, run weekly)",
]

[tool.ruff]
src = ["src"]
target-version = "py312"
line-length = 140

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"
packages = ["wardline"]

[dependency-groups]
dev = [
    "hypothesis>=6.151.9",
    "types-jsonschema>=4.26.0.20260202",
    "types-pyyaml>=6.0.12.20250915",
]
