[project]
name = "wardline-flake8"
version = "0.1.0"
description = "Wardline advisory rules for flake8 — run wardline scan for authoritative analysis"
requires-python = ">=3.9"
dependencies = ["flake8>=5.0"]

[project.entry-points."flake8.extension"]
WL = "wardline_flake8:WardlineChecker"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
